--- a/1.hello-world/3.read-video-angular/src/index.html
+++ b/1.hello-world/3.read-video-angular/src/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Dynamsoft Barcode Reader in an Angular Application, this online demo lets you scan barcodes using a camera.">
     <meta name="keywords" content="read barcodes from camera in Angular">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="canonical" href="https://demo.dynamsoft.com/samples/dbr/js/1.hello-world/3.read-video-angular/dist/hello-world/" >
 </head>
 
 <body>
