--- a/1.hello-world/6.read-video-vue3/public/index.html
+++ b/1.hello-world/6.read-video-vue3/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Read barcodes from camera with Dynamsoft Barcode Reader in a Vue3 Application.">
     <meta name="keywords" content="read barcode from camera in Vue3">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="canonical" href="https://demo.dynamsoft.com/Samples/DBR/JS/1.hello-world/6.read-video-vue3/dist/">
     <title>
         <%= htmlWebpackPlugin.options.title %>
     </title>
