--- a/4.use-case/1.fill-a-form-with-barcode-reading.html
+++ b/4.use-case/1.fill-a-form-with-barcode-reading.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="canonical" href="https://demo.dynamsoft.com/samples/dbr/js/4.use-case/1.fill-a-form-with-barcode-reading.html">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Read barcodes and fill form fields using barcode with Barcode Reader. Get quick and accurate results in no time.">
