--- a/1.hello-world/1.hello-world.html
+++ b/1.hello-world/1.hello-world.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Quickly read barcodes with Dynamsoft Barcode Reader from a live camera stream.">
     <meta name="keywords" content="camera based barcode reading">
+    <link rel="canonical" href="https://demo.dynamsoft.com/Samples/DBR/JS/1.hello-world/1.hello-world.html">
     <title>Dynamsoft Barcode Reader Sample - Hello World (Decoding via Camera)</title>
 </head>
 
