--- a/1.hello-world/10.read-video-pwa/helloworld-pwa.html
+++ b/1.hello-world/10.read-video-pwa/helloworld-pwa.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="read barcode from camera in PWA">
     <title>Dynamsoft Barcode Reader PWA Sample - Hello World (Decoding via Camera)</title>
     <link rel="manifest" href="./helloworld-pwa.json">
+    <link rel="canonical" href="https://demo.dynamsoft.com/Samples/DBR/JS/1.hello-world/10.read-video-pwa/helloworld-pwa.html">
 </head>
 
 <body>
