--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="canonical" href="https://demo.dynamsoft.com/Samples/DBR/JS/index.html">
     <link rel="stylesheet" href="balloon.min.css">
     <!-- Used for tooltip styling -->
     <title>Dynamsoft Barcode Reader Samples</title>
