--- a/2.ui-tweaking/4.difference-video-size.html
+++ b/2.ui-tweaking/4.difference-video-size.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Enlarge video stream to read barcodes with Dynamsoft Barcode Reader. Scan the barcodes in full screen and exit once done.">
     <meta name="keywords" content="enlarge video stream to read barcodes">
+    <link rel="canonical" href="https://demo.dynamsoft.com/Samples/DBR/JS/2.ui-tweaking/4.difference-video-size.html">
     <title>Dynamsoft Barcode Reader Sample -Enlarge the Video Stream</title>
 </head>
 
