--- a/3.settings/1.barcodeFormats-expectedBarcodes.html
+++ b/3.settings/1.barcodeFormats-expectedBarcodes.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Read barcodes from camera with Dynamsoft Barcode Reader and update simple runtime settings.">
     <meta name="keywords" content="read barcode from camera, formats and count">
+    <link rel="canonical" href="https://demo.dynamsoft.com/Samples/DBR/JS/3.settings/1.barcodeFormats-expectedBarcodes.html">		
     <title>Dynamsoft Barcode Reader Sample - Limit Barcode Formats or Count</title>
     <!--
       This sample makes use of the library hosted by the CDN jsDelivr. If you would rather use the
